--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.1.9",
     "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "prettier": "^3.5.3"
   }
 }
