--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
   },
   "homepage": "https://github.com/caish156/Node-Basics#readme",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.0.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.9",
+    "pg": "^8.14.1",
+    "pg-promise": "^11.13.0",
+    "sequelize": "^6.37.6",
+    "sequelize-cli": "^6.6.2",
     "winston": "^3.17.0"
   },
   "devDependencies": {
