--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon src/index.js",
     "dev": "node src/index.js",
     "db:migrate": "npx sequelize-cli db:migrate --migrations-path src/db/migrations",
@@ -28,6 +27,8 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "loadash": "^1.0.0",
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.13.0",
     "morgan": "^1.10.0",
     "pg": "^8.14.1",
     "pg-promise": "^11.13.0",
